[package]
name = "rust-portfolio"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = "3.0.0-beta.2"
dirs = "3.0.2"
preferences = "1.1.0"
reqwest = { version = "0.11.4", features = ["json"]}
serde_json = "1.0.64"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
